--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,8 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <mapr-version>6.0.0-mapr</mapr-version>
-        <mapr-streams-version>0.9.0.0-mapr-1801-streams-6.0.0</mapr-streams-version>
+        <mapr-version>6.1.0-mapr</mapr-version>
+        <mapr-streams-version>1.1.1-mapr-streams-6.1.0</mapr-streams-version>
     </properties>
 
 
